Just a few adjusts

--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,11 @@
   display: -ms-flexbox;
   display: flex;
   background-color: #1F2937;
-  padding: 100px 250px;
+  padding: 20px 250px;
   gap: 50px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #main-section .left-box {
@@ -51,13 +54,12 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   gap: 10px;
+  width: 800px;
+  height: 500px;
 }
 
 #main-section .left-box h1 {
@@ -84,7 +86,6 @@
 }
 
 #main-section .right-box {
-  background-color: #ffffff69;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -92,9 +93,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -102,6 +100,8 @@
       -ms-flex-align: center;
           align-items: center;
   color: #F9F4F8;
+  width: 800px;
+  height: 500px;
 }
 
 #main-section .right-box img {
@@ -267,8 +267,8 @@ blockquote, cite, p, figcaption, strong {
   display: -ms-flexbox;
   display: flex;
   background-color: #3b82f6;
-  width: 60em;
-  height: 8em;
+  width: 80em;
+  height: 10em;
   border-radius: .5em;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -291,12 +291,13 @@ blockquote, cite, p, figcaption, strong {
 
 #fourth-section .content-box .content-holder .two-lines :first-child {
   color: white;
-  font-size: 24px;
+  font-size: 40px;
   font-weight: 1000;
 }
 
 #fourth-section .content-box .content-holder .two-lines :last-child {
   color: white;
+  font-size: 20px;
 }
 
 #fourth-section .content-box .content-holder button {
@@ -307,7 +308,7 @@ blockquote, cite, p, figcaption, strong {
   height: 2em;
   color: white;
   font-weight: 1000;
-  font-size: 16px;
+  font-size: 30px;
 }
 
 #footer {
