--- a/styles.scss
+++ b/styles.scss
@@ -31,16 +31,19 @@
 #main-section{
     display: flex;
     background-color: #1F2937;
-    padding: 100px 250px;
+    padding: 20px 250px;
     gap: 50px;
+    justify-content: center;
 
     .left-box{
         background-color: #1F2937;
         display: flex;
         flex-direction: column;
-        flex: 1;
+        //flex: 1;
         justify-content: center;
         gap: 10px;
+        width: 800px;
+        height: 500px;
         
         h1{
             color: #F9F4F8;
@@ -68,13 +71,15 @@
     }
 
     .right-box{
-        background-color: #ffffff69;
+        //background-color: #ffffff69;
         display: flex;
         flex-direction: column;
-        flex: 1;
+        //flex: 1;
         justify-content: center;
         align-items: center;
         color: #F9F4F8;
+        width: 800px;
+        height: 500px;
 
         img{
             width: 550px;
@@ -201,8 +206,8 @@ blockquote, cite, p, figcaption, strong{
     .content-box{
         display: flex;
         background-color: #3b82f6;
-        width: 60em;
-        height: 8em;
+        width: 80em;
+        height: 10em;
         border-radius: .5em;
         justify-content: center;
 
@@ -216,13 +221,13 @@ blockquote, cite, p, figcaption, strong{
 
                 :first-child{
                     color: white;
-                    font-size: 24px;
+                    font-size: 40px;
                     font-weight: 1000;
                 }
 
                 :last-child{
                     color: white;
-                    
+                    font-size: 20px;
                 }
             }
 
@@ -234,7 +239,7 @@ blockquote, cite, p, figcaption, strong{
                 height: 2em;
                 color: white;
                 font-weight: 1000;
-                font-size: 16px;
+                font-size: 30px;
             }
         }
     }
