--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 8px 250px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 #header .logo {
