--- a/styles.scss
+++ b/styles.scss
@@ -12,6 +12,8 @@
     display: flex;
     align-items: center;
     padding: 8px 250px;
+    position: sticky;
+    top: 0;
 
     .logo{
         color: #4a5043;
