--- a/styles.css
+++ b/styles.css
@@ -344,6 +344,115 @@ blockquote, cite, p, figcaption, strong {
   background-color: #77aafc;
 }
 
+.fifth-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #202331;
+  padding: 5em 14em;
+}
+
+.fifth-section .fifth-section-holder {
+  display: -ms-grid;
+  display: grid;
+  width: 100%;
+  padding: 0 2em;
+  background-color: #2c3043;
+}
+
+.fifth-section .s-var {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 2em;
+  width: 100%;
+  background-color: #2c3043;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: .5em 0;
+}
+
+.fifth-section .s-var .circles-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+  margin-right: auto;
+}
+
+.fifth-section .s-var .circles-box .circles {
+  width: 12px;
+  height: 12px;
+  background-color: white;
+  border-radius: 50%;
+}
+
+.fifth-section .s-var .circles-box .circles.c1 {
+  background-color: #fc6057;
+}
+
+.fifth-section .s-var .circles-box .circles.c2 {
+  background-color: #fda061;
+}
+
+.fifth-section .s-var .circles-box .circles.c3 {
+  background-color: #1bc1a1;
+}
+
+.fifth-section .s-var .search {
+  padding: 0 .5em;
+  width: 93%;
+  background-color: #f8f9fb;
+  color: gray;
+}
+
+.fifth-section .grid-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1em;
+  padding: .5em 0 1.5em 0;
+  grid-auto-rows: minmax(50px, auto);
+}
+
+.fifth-section .grid-container-child.one {
+  background-color: #fda061;
+  grid-column: span 3;
+}
+
+.fifth-section .grid-container-child.two {
+  background-color: #01a787;
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2 / 4;
+}
+
+.fifth-section .grid-container-child.three {
+  background-color: #34daba;
+  grid-column: span 2;
+}
+
+.fifth-section .grid-container-child.four {
+  background-color: #fc6057;
+  -ms-grid-column: 2;
+  grid-column: 2 / 2;
+  -ms-grid-row: 3;
+  grid-row: 3;
+}
+
+.fifth-section .grid-container-child.five {
+  background-color: #fda061;
+  -ms-grid-column: 3;
+  grid-column: 3 / 3;
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
+}
+
 #footer {
   background-color: #FFCB47;
   text-align: center;
