--- a/styles.scss
+++ b/styles.scss
@@ -294,7 +294,7 @@ blockquote, cite, p, figcaption, strong{
         .circles-box{
             display: flex;
             gap: 5px;
-            margin-right: auto;
+            margin-right: 20px;
             
             .circles{
                 width: 12px;
