--- a/styles.css
+++ b/styles.css
@@ -64,10 +64,137 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
+}
+
+#main-section .main-section-bg {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  gap: 1.5em;
+  -ms-grid-columns: (150px)[9];
+      grid-template-columns: repeat(9, 150px);
+  grid-auto-rows: minmax(150px, auto);
+  position: absolute;
+  opacity: 8%;
+  z-index: 1;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#main-section .main-section-bg .box-grid-bg {
+  border-radius: 1em;
+}
+
+#main-section .main-section-bg .box-grid-bg.one {
+  background-color: #349988;
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+#main-section .main-section-bg .box-grid-bg.two {
+  background-color: #4cacc2;
+  grid-column: span 3;
+}
+
+#main-section .main-section-bg .box-grid-bg.three {
+  background-color: #a85751;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 3 / 5;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2 / 4;
+}
+
+#main-section .main-section-bg .box-grid-bg.four {
+  background-color: #335c66;
+  -ms-grid-column: 5;
+  -ms-grid-column-span: 1;
+  grid-column: 5 / 6;
+}
+
+#main-section .main-section-bg .box-grid-bg.five {
+  background-color: #bc589c;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+}
+
+#main-section .main-section-bg .box-grid-bg.six {
+  background-color: #716664;
+}
+
+#main-section .main-section-bg .box-grid-bg.seven {
+  background-color: #bc589c;
+  -ms-grid-column: 6;
+  -ms-grid-column-span: 1;
+  grid-column: 6 / 7;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+}
+
+#main-section .main-section-bg .box-grid-bg.eight {
+  background-color: #349988;
+  -ms-grid-column: 7;
+  -ms-grid-column-span: 3;
+  grid-column: 7 / 10;
+  -ms-grid-row: 1;
+  grid-row: 1;
+}
+
+#main-section .main-section-bg .box-grid-bg.nine {
+  background-color: #a85751;
+  -ms-grid-column: 7;
+  -ms-grid-column-span: 1;
+  grid-column: 7 / 8;
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+#main-section .main-section-bg .box-grid-bg.ten {
+  background-color: #716664;
+  -ms-grid-column: 8;
+  -ms-grid-column-span: 1;
+  grid-column: 8 / 9;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2 / 4;
+}
+
+#main-section .main-section-bg .box-grid-bg.eleven {
+  background-color: #335c66;
+  -ms-grid-column: 9;
+  -ms-grid-column-span: 1;
+  grid-column: 9 / 10;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+}
+
+#main-section .main-section-bg .box-grid-bg.twelve {
+  background-color: #4cacc2;
+  -ms-grid-column: 6;
+  -ms-grid-column-span: 2;
+  grid-column: 6 / 8;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
+}
+
+#main-section .main-section-bg .box-grid-bg.thirteen {
+  background-color: #792d66;
+  -ms-grid-column: 9;
+  -ms-grid-column-span: 1;
+  grid-column: 9 / 10;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
 }
 
 #main-section .left-box {
-  background-color: #1F2937;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,6 +208,7 @@
   gap: 10px;
   width: 800px;
   height: 500px;
+  z-index: 2;
 }
 
 #main-section .left-box h1 {
@@ -115,6 +243,7 @@
 }
 
 #main-section .right-box {
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -136,6 +265,7 @@
 #main-section .right-box img {
   width: 550px;
   height: auto;
+  border-radius: .5em;
 }
 
 #random-section {
