--- a/styles.scss
+++ b/styles.scss
@@ -44,15 +44,97 @@
     
 }
 
+
 #main-section{
     display: flex;
     background-color: #1F2937;
     padding: 20px 250px;
     gap: 50px;
     justify-content: center;
+    position: relative;
+
+    .main-section-bg{
+        width: 100%;
+        display: grid;
+        gap: 1.5em;
+        grid-template-columns: repeat(9, 150px);
+        grid-auto-rows: minmax(150px, auto);
+        position: absolute;
+        opacity: 8%;
+        z-index: 1;
+        justify-content: center;
+
+        .box-grid-bg{
+            border-radius: 1em;
+        }
+
+        .box-grid-bg.one{
+            background-color: #349988;
+            grid-column: span 2;
+            grid-row: span 2;
+        }
+        .box-grid-bg.two{
+            background-color: #4cacc2;
+            grid-column: span 3;
+        }
+        .box-grid-bg.three{
+            background-color: #a85751;
+            grid-column: 3 / 5;
+            grid-row: 2 / 4;
+        }
+        .box-grid-bg.four{
+            background-color: #335c66;
+            grid-column: 5 / 6;
+        }
+        .box-grid-bg.five{
+            background-color: #bc589c;
+            grid-column: 1 / 3;
+        }
+        .box-grid-bg.six{
+            background-color: #716664;
+        }
+        .box-grid-bg.seven{
+            background-color: #bc589c;
+            grid-column: 6 / 7;
+            grid-row: 1 / 3;
+        }
+        .box-grid-bg.eight{
+            background-color: #349988;
+            grid-column: 7 / 10;
+            grid-row: 1;
+        }
+        .box-grid-bg.nine{
+            background-color: #a85751;
+            grid-column: 7 / 8;
+            grid-row: 2;
+        }
+        .box-grid-bg.ten{
+            background-color: #716664;
+            grid-column: 8 / 9;
+            grid-row: 2 / 4;
+        }
+        .box-grid-bg.eleven{
+            background-color: #335c66;
+            grid-column: 9 / 10;
+            grid-row: 2 / 3;
+        }
+        .box-grid-bg.twelve{
+            background-color: #4cacc2;
+            grid-column: 6 / 8;
+            grid-row: 3 / 4;
+        }
+        .box-grid-bg.thirteen{
+            background-color: #792d66;
+            grid-column: 9 / 10;
+            grid-row: 3 / 4;
+        }
+        
+    }
+    
+
 
     .left-box{
-        background-color: #1F2937;
+        //background-color: #1F2937;
         display: flex;
         flex-direction: column;
         //flex: 1;
@@ -60,6 +142,7 @@
         gap: 10px;
         width: 800px;
         height: 500px;
+        z-index: 2;
         
         h1{
             color: #F9F4F8;
@@ -92,6 +175,7 @@
     }
 
     .right-box{
+        z-index: 2;
         //background-color: #ffffff69;
         display: flex;
         flex-direction: column;
@@ -105,6 +189,7 @@
         img{
             width: 550px;
             height: auto;
+            border-radius: .5em;
         }
     }
 }
