--- a/styles.scss
+++ b/styles.scss
@@ -356,23 +356,23 @@ blockquote, cite, p, figcaption, strong{
 
 .fifth-section{
     display: flex;
-    background-color: #202331;
-    padding: 5em 14em;
+    background-color: #14161f;
+    //padding: 5em 14em;
 
     .fifth-section-holder{
         display: grid;
         width: 100%;
         padding: 0 2em;
         background-color: #2c3043;
+        z-index: 1;
+        margin: 5.6em 14em;
     }
-
-
 
     .s-var{
         display: flex;
         height: 2em;
         width: 100%;
-        background-color: #2c3043;
+        //background-color: #2c3043;
         align-items: center;
         padding: .5em 0;
 
@@ -411,7 +411,6 @@ blockquote, cite, p, figcaption, strong{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 1em;
-        //background-color: rebeccapurple;
         padding: .5em 0 1.5em 0;
         grid-auto-rows: minmax(50px, auto);
 
@@ -446,10 +445,76 @@ blockquote, cite, p, figcaption, strong{
         grid-column: 3 / 3;
         align-self: stretch;
     }
-    
+}
 
+.section-n6-holder{
+    position: absolute;
+    width: 100%;
+    opacity: 5%;
+}
 
+.section-n6{
+    //padding: 8px;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(4, 100px);
+    grid-auto-rows: minmax(100px, auto);
+    gap: 2em;
+    grid-template-areas:
+    "one  one  two  two  two  three three three three three four four"
+    "five  five  two  two  two  three three three three three six six"
+    "seven  seven  eight  nine  nine  three three three three three ten ten"
+    "eleven eleven eleven eleven eleven three three three three three twelve twelve";
 
+    .s-n6.box1{
+        grid-area: one;
+        background-color: #c9316b;
+    }
+    .s-n6.box2{
+        background-color: #ca319d;
+        grid-area: two;
+    }
+    .s-n6.box3{
+        background-color: #ed6e62;
+        grid-area: three;
+    }
+    .s-n6.box4{
+        background-color: #efc437;
+        grid-area: four;
+    }
+    .s-n6.box5{
+        background-color: #538c45;
+        grid-area: five;
+    }
+    .s-n6.box6{
+        background-color: #267c87;
+        grid-area: six;
+    }
+    .s-n6.box7{
+        background-color: #799928;
+        grid-area: seven;
+    }
+    .s-n6.box8{
+        background-color: #478755;
+        grid-area: eight;
+    }
+    .s-n6.box9{
+        background-color: #30c9c2;
+        grid-area: nine;
+    }
+    .s-n6.box10{
+        background-color: #31c98f;
+        grid-area: ten;
+    }
+    .s-n6.box11{
+        background-color: #544079;
+        grid-area: eleven;
+    }
+    .s-n6.box12{
+        background-color: #de212f;
+        grid-area: twelve;
+    }
 }
 
 #footer{
